--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.3.0",
 	"appid": "wx5c85cdd921effd4d",
-	"projectname": "forGxl",
+	"projectname": "for%20my%20love",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
